--- a/index.html
+++ b/index.html
@@ -3,20 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>wefood</title>
-  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+  <title>eatfood</title>
+  <divnk rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet/less" href="css/style.less">
   <script src="js/jquery-1.7.2.min.js"></script>
   <script src="js/less.js"></script>
+  <script src="js/jquery.smooth-scroll.js"></script>
   <script src="js/main.js"></script>
 </head>
 <body>
   <div class="container">
-    <ul id="wrap">
-      <li id="welcome">欢迎进入eatfood！点餐时间开始！</li>
-      <li id="makeorder">开始点餐</li>
-      <li id="success">点餐完成</li>
-    </ul>
+    <div id="wrap">
+      <div id="welcome" class="pane">
+        欢迎进入eatfood！点餐时间开始！
+        <input type="button" value="下一步" class="button step1">
+      </div> <!-- welcome ends --> 
+
+      <div id="makeorder" class="pane">
+        开始点餐
+        <input type="button" value="上一步" class="button step2">
+        <input type="button" value="下一步" class="button step3">
+      </div> 
+
+      <div id="success" class="pane">
+        点餐完成
+        <input type="button" value="上一步" class="button step4">
+      </div>
+    </div>
   </div>
 </body>
 </html>
