finish history tab demo

--- a/history.html
+++ b/history.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 	<div class="container">
-		<h3 class="list-title">点餐历史</h3>
-		<h3 class="analysis-title">组合分析</h3>
+		<h3 class="tab list-title">点餐历史</h3>
+		<h3 class="tab analysis-title">组合分析</h3>
 		<table class="table order-list">
 			<tr>
 				<th>地点</th>
@@ -63,9 +63,10 @@
 					</ul>
 				</td>
 			</tr>
-			
-		</ul>
+		</table> <!-- order-list ends -->
 
+		<div class="analysis-list">
+		</div> <!-- analysis-list ends -->
 	</div>
 
 </body>
