--- a/history.html
+++ b/history.html
@@ -66,7 +66,20 @@
 		</table> <!-- order-list ends -->
 
 		<div class="analysis-list">
-		</div> <!-- analysis-list ends -->
+		<table class="table">
+			<tr class="food-popular"><td>一周最受欢迎菜肴：家常豆腐</td></tr>
+			<tr class="food-notpop"><td>一周最受冷落菜肴：油淋茄子</td></tr>
+			<tr class="food-poplist"><td>一周菜肴受欢迎程度排序：</td></tr>
+			<tr class ="food-popitem"><td>家常豆腐 6次</td></tr>
+			<tr class ="food-popitem"><td>油淋茄子 5次</td></tr>
+			<tr class ="food-popitem"><td></td></tr>
+			<tr class="food-popular"><td>一月最受欢迎菜肴：家常豆腐</td></tr>
+			<tr class="food-notpop"><td>一月最受冷落菜肴：油淋茄子</td></tr>
+			<tr class="food-poplist"><td>一月菜肴受欢迎程度排序：</td></tr>
+			<tr class ="food-popitem"><td>家常豆腐 6次</td></tr>
+			<tr class ="food-popitem"><td>油淋茄子 5次</td></tr>	
+		</table> <!-- order-list ends -->
+		</div>
 	</div>
 
 </body>
