--- a/history.html
+++ b/history.html
@@ -67,6 +67,24 @@
 
 		<div class="analysis-list">
 		<table class="table">
+			<tr class="food-pop">
+				<td colspan="8">
+					<ul>
+						<li class="popfood">
+							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
+							<p class="food-tip">
+								<span class="fodd-name">干煸四季豆</span>
+							</p>
+						</li>
+						<li class="popfood">
+							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
+							<p class="food-tip">
+								<span class="fodd-name">干煸四季豆</span>
+							</p>
+						</li>
+					</ul>
+				</td>
+			</tr>
 			<tr class="food-popular"><td>一周最受欢迎菜肴：家常豆腐</td></tr>
 			<tr class="food-notpop"><td>一周最受冷落菜肴：油淋茄子</td></tr>
 			<tr class="food-poplist"><td>一周菜肴受欢迎程度排序：</td></tr>
