add second page

--- a/history.html
+++ b/history.html
@@ -63,6 +63,47 @@
 					</ul>
 				</td>
 			</tr>
+			<tr class="order-item">
+				<td class="place">利佳餐馆</td>
+				<td class="count">6道菜</td>
+				<td class="person-num">6人</td>
+				<td class ="money">78元</td>
+				<td class ="time">2013-05-21 10:21</td>
+			</tr>
+			<tr class="order-detail">
+				<td colspan="5">
+					<ul>
+						<li class="food">
+							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
+							<p class="food-tip">
+								<span class="fodd-name">干煸四季豆</span>
+								<span class="food-price">12元</span>
+							</p>
+						</li>
+						<li class="food">
+							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
+							<p class="food-tip">
+								<span class="fodd-name">干煸四季豆</span>
+								<span class="food-price">12元</span>
+							</p>
+						</li>
+						<li class="food">
+							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
+							<p class="food-tip">
+								<span class="fodd-name">干煸四季豆</span>
+								<span class="food-price">12元</span>
+							</p>
+						</li>
+						<li class="food">
+							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
+							<p class="food-tip">
+								<span class="fodd-name">干煸四季豆</span>
+								<span class="food-price">12元</span>
+							</p>
+						</li>
+					</ul>
+				</td>
+			</tr>
 		</table> <!-- order-list ends -->
 
 		<div class="analysis-list">
