finish eatgoods version0.1

--- a/history.html
+++ b/history.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>wefood-history</title>
+  <title>Eatgoods-history</title>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet/less" href="css/history.less">
   <script src="js/jquery-1.7.2.min.js"></script>
@@ -16,127 +16,49 @@
 		<h3 class="tab analysis-title">组合分析</h3>
 		<table class="table order-list">
 			<tr>
-				<th>地点</th>
-				<th>菜数量</th>
-				<th>人数</th>
-				<th>总价</th>
-				<th>时间</th>
-			</tr>
-			<tr class="order-item">
-				<td class="place">利佳餐馆</td>
-				<td class="count">6道菜</td>
-				<td class="person-num">6人</td>
-				<td class ="money">78元</td>
-				<td class ="time">2013-05-21 10:21</td>
-			</tr>
-			<tr class="order-detail">
-				<td colspan="5">
-					<ul>
-						<li class="food">
-							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
-							<p class="food-tip">
-								<span class="fodd-name">干煸四季豆</span>
-								<span class="food-price">12元</span>
-							</p>
-						</li>
-						<li class="food">
-							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
-							<p class="food-tip">
-								<span class="fodd-name">干煸四季豆</span>
-								<span class="food-price">12元</span>
-							</p>
-						</li>
-						<li class="food">
-							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
-							<p class="food-tip">
-								<span class="fodd-name">干煸四季豆</span>
-								<span class="food-price">12元</span>
-							</p>
-						</li>
-						<li class="food">
-							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
-							<p class="food-tip">
-								<span class="fodd-name">干煸四季豆</span>
-								<span class="food-price">12元</span>
-							</p>
-						</li>
-					</ul>
-				</td>
-			</tr>
-			<tr class="order-item">
-				<td class="place">利佳餐馆</td>
-				<td class="count">6道菜</td>
-				<td class="person-num">6人</td>
-				<td class ="money">78元</td>
-				<td class ="time">2013-05-21 10:21</td>
-			</tr>
-			<tr class="order-detail">
-				<td colspan="5">
-					<ul>
-						<li class="food">
-							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
-							<p class="food-tip">
-								<span class="fodd-name">干煸四季豆</span>
-								<span class="food-price">12元</span>
-							</p>
-						</li>
-						<li class="food">
-							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
-							<p class="food-tip">
-								<span class="fodd-name">干煸四季豆</span>
-								<span class="food-price">12元</span>
-							</p>
-						</li>
-						<li class="food">
-							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
-							<p class="food-tip">
-								<span class="fodd-name">干煸四季豆</span>
-								<span class="food-price">12元</span>
-							</p>
-						</li>
-						<li class="food">
-							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
-							<p class="food-tip">
-								<span class="fodd-name">干煸四季豆</span>
-								<span class="food-price">12元</span>
-							</p>
-						</li>
-					</ul>
-				</td>
+				<th><h4>地点</h4></th>
+				<th><h4>菜数量</h4></th>
+				<th><h4>人数</h4></th>
+				<th><h4>总价</h4></th>
+				<th><h4>时间</h4></th>
 			</tr>
 		</table> <!-- order-list ends -->
 
 		<div class="analysis-list">
 		<table class="table">
+			<tr class="food-poplist"><td><h3>最近一月最受欢迎菜肴：</h3></td></tr>
 			<tr class="food-pop">
 				<td colspan="8">
 					<ul>
 						<li class="popfood">
 							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
 							<p class="food-tip">
-								<span class="fodd-name">干煸四季豆</span>
-							</p>
-						</li>
-						<li class="popfood">
-							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
-							<p class="food-tip">
-								<span class="fodd-name">干煸四季豆</span>
+								<span class="fodd-name"></span>
 							</p>
 						</li>
 					</ul>
 				</td>
 			</tr>
-			<tr class="food-popular"><td>一周最受欢迎菜肴：家常豆腐</td></tr>
-			<tr class="food-notpop"><td>一周最受冷落菜肴：油淋茄子</td></tr>
-			<tr class="food-poplist"><td>一周菜肴受欢迎程度排序：</td></tr>
+			<tr class="food-poplist"><td><h3>最近一月最受冷落菜肴：</h3></td></tr>
+			<tr class="food-pop">
+				<td colspan="8">
+					<ul>
+						<li class="downfood">
+							<img src="images/干煸四季豆.jpg" alt="" class="food-img">
+							<p class="food-tip">
+								<span class="fodd-name"></span>
+							</p>
+						</li>
+					</ul>
+				</td>
+			</tr>
+			<tr class="food-poplist"><td><h3>最近一月菜肴点击次数排序：</h3></td></tr>
 			<tr class ="food-popitem"><td>家常豆腐 6次</td></tr>
 			<tr class ="food-popitem"><td>油淋茄子 5次</td></tr>
-			<tr class ="food-popitem"><td></td></tr>
-			<tr class="food-popular"><td>一月最受欢迎菜肴：家常豆腐</td></tr>
-			<tr class="food-notpop"><td>一月最受冷落菜肴：油淋茄子</td></tr>
-			<tr class="food-poplist"><td>一月菜肴受欢迎程度排序：</td></tr>
-			<tr class ="food-popitem"><td>家常豆腐 6次</td></tr>
-			<tr class ="food-popitem"><td>油淋茄子 5次</td></tr>	
+			<tr class ="food-popitem"><td>油淋茄子 5次</td></tr>
+			<tr class ="food-popitem"><td>油淋茄子 5次</td></tr>
+			<tr class ="food-popitem"><td>油淋茄子 5次</td></tr>
+			<tr class ="food-popitem"><td>油淋茄子 5次</td></tr>
 		</table> <!-- order-list ends -->
 		</div>
 	</div>
